--- a/src/vistas/modulos/VistaKardex.form
+++ b/src/vistas/modulos/VistaKardex.form
@@ -123,6 +123,9 @@
               <Color blue="e5" green="74" red="27" type="rgb"/>
             </Property>
             <Property name="enabled" type="boolean" value="false"/>
+            <Property name="themeTooltip" type="necesario.Global$THEMETOOLTIP" editor="org.netbeans.modules.form.editors.EnumEditor">
+              <Value id="LIGHT"/>
+            </Property>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
